# IB_Robot

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .shrc_local  CONTRIBUTING.en.md  CONTRIBUTING.md  README.md
.agents/skills/: README.md
.agents/skills/atomgit-collaboration/: SKILL.md
.agents/skills/atomgit-issue/scripts/: issue_management.py
.agents/skills/atomgit-pr/: SKILL.md
.agents/skills/atomgit-pr-architecture-review/: SKILL.md
.agents/skills/atomgit-pr-architecture-review/lib/: comment_formatter.py  llm_architecture_reviewer.py
.agents/skills/atomgit-pr-architecture-review/scripts/: architecture_review.py
.agents/skills/atomgit-pr-review/: SKILL.md
.agents/skills/atomgit-pr-review/scripts/: pr_review.py
.agents/skills/atomgit-pr/scripts/: pr_management.py
.agents/skills/atomgit-review-resolution/: SKILL.md
.agents/skills/atomgit-review-resolution/scripts/: review_resolution.py
.agents/skills/bq3588-oh-rknn/: SKILL.md
.agents/skills/ibrobot-architecture/: SKILL.md
.agents/skills/ibrobot-bq3588hm-oh/: SKILL.md
.agents/skills/ibrobot-build/: SKILL.md
.agents/skills/ibrobot-docker-verify/: SKILL.md
.agents/skills/ibrobot-docker-verify-oee/: SKILL.md
.agents/skills/ibrobot-hdc/: SKILL.md
.agents/skills/intro/: SKILL.md
.agents/skills/rknn-convert/: SKILL.md  convert_to_rknn.py
docs/: BQ3588HM_OpenHarmony_ROS.md  BQ3588HM_board_usage.md  RKNN_NPU_inference_on_BQ3588HM.md
libs/atomgit_sdk/: README.md
libs/atomgit_sdk/src/atomgit_sdk/: __init__.py  client.py
libs/atomgit_sdk/tests/: test_client_retry.py  test_repair_service.py
scripts/: build.sh  install_ros.sh  setup.sh
scripts/setup/: detect.sh  lerobot_patches.sh  rosdep.sh  submodules.sh
scripts/setup/tests/: test_lerobot_filter.sh
scripts/tracing/: setup_tracing.sh
src/action_dispatch/: README.en.md  README.md  package.xml
src/action_dispatch/action_dispatch/: action_dispatcher_node.py
src/attention_viz/: CMakeLists.txt  README.md  package.xml
src/attention_viz/attention_viz/: __init__.py  attention_hook.py  attention_masking.py  attention_visualization_node.py  utils.py  visualization_core.py
src/attention_viz/config/: visualization_params.yaml
src/attention_viz/launch/: attention_viz.launch.py
src/attention_viz/test/: test_attention_utils.py
src/dataset_tools/: README.md  package.xml
src/dataset_tools/dataset_tools/: bag_to_lerobot.py  camera_alignment.py  camera_isp_calibrator.py  episode_recorder.py  record_cli.py  rerun_viewer.py
src/dataset_tools/dataset_tools/camera_isp/: hw_pipeline.py  hw_stages.py  v4l2_ctl.py
src/dataset_tools/docs/tools/: camera_alignment.md
src/dataset_tools/test/: test_bag_to_lerobot.py  test_camera_alignment.py  test_camera_isp_calibrator.py  test_episode_recorder.py  test_rerun_viewer.py
src/hardware_mock/: README.md  package.xml  setup.cfg  setup.py
src/hardware_mock/hardware_mock/: __init__.py  contract_mock_node.py  contract_plan.py  image_sources.py  joint_model.py  type_registry.py
src/hardware_mock/launch/: hardware_mock.launch.py
src/hardware_mock/test/: test_contract_plan.py  test_image_sources.py  test_joint_model.py
src/ibrobot_msgs/: CMakeLists.txt
src/ibrobot_msgs/action/: PrimitiveCommand.action  SkillCommand.action
src/ibrobot_msgs/msg/: AttentionWeights.msg  SceneAnalysisRequest.msg  SceneAnalysisResult.msg  TaskCommand.msg  TaskStatus.msg
src/ibrobot_msgs/srv/: ValidatePrimitive.srv  ValidateSkill.srv
src/inference_service/: README.en.md  README.md  package.xml
src/inference_service/inference_service/: lerobot_policy_node.py  pure_inference_node.py
src/inference_service/inference_service/core/: __init__.py  _policy_config.py  compiled_policy.py  coordinator.py  (+3 more)
src/inference_service/tests/: test_ascend_om.py  test_compiled_policy.py  test_inference_coordinator.py  test_policy_config.py  test_pure_inference_engine.py  test_rknn_policy_wrapper.py
src/lekiwi_description/: CMakeLists.txt  package.xml
src/lekiwi_description/meshes/: bno055_imu.stl  hd_webcam.stl  ld06_lidar.stl  lekiwi_base.stl  omni_wheel.stl
src/lekiwi_description/urdf/: base.common.xacro  base.control.xacro  base.urdf  base.urdf.xacro  lekiwi_assembled.urdf.xacro
src/lekiwi_hardware/: CMakeLists.txt  README.md  lekiwi_hardware_plugin.xml  package.xml
src/lekiwi_hardware/config/: lekiwi_controllers.yaml
src/lekiwi_hardware/include/lekiwi_hardware/: lekiwi_conversions.hpp  lekiwi_system_hardware.hpp
src/lekiwi_hardware/src/: lekiwi_system_hardware.cpp
src/lekiwi_hardware/test/: test_lekiwi_conversions.cpp
src/lekiwi_hardware/tools/: scan_motors.cpp
src/model_utils/model_utils/: README.md  export_onnx_3403.py  export_onnx_atc.py  export_onnx_rknn.py  loss_compare.py  pi05_dist_metrics.py
src/model_utils/test/: test_export_onnx_atc.py
src/robot_config/: README.en.md  README.md  package.xml  setup.cfg  setup.py
src/robot_config/launch/: robot.launch.py
src/robot_config/robot_config/: config.py  contract_builder.py  loader.py  logger_utils.py  utils.py  wait_for_clock.py  wait_for_controllers.py
src/robot_config/test/: test_config.py  test_joint_conversion.py  test_launch_readiness.py
src/robot_moveit/: README.md  package.xml
src/robot_moveit/scripts/: moveit_gateway.py
src/robot_navigation/: README.md  package.xml  setup.py
src/robot_navigation/config/: config.rviz  ekf.yaml  keywords.json  nav2_params.yaml
src/robot_navigation/launch/: ekf_rtabmap_launch.py  funasr_client.launch.py  nav2_bringup.launch.py
src/robot_navigation/robot_navigation/: cmd_vel_bridge_node.py  funasr_client_node.py  nav2_goal_client.py  voice_control.py
src/robot_navigation/scripts/: install.sh  start_service.sh
src/robot_navigation/test/: test_cmd_vel_bridge.py  test_nav2_goal_client.py  test_voice_control.py
src/robot_teleop/: package.xml
src/so101_hardware/: package.xml
src/voice_asr_service/: README.md
src/voice_asr_service/voice_asr_service/: asr_inference_module.py  audio_capture_module.py  defaults.py  model_manager.py  vad_module.py  voice_asr_node.py
(+37 files in other folders)
